- html adjustments and flows - fake gate flow - cookies flow - clickable images that overlay - mobile and tablet friendly card images and envelop
(cherry picked from commit 923cc1cf3b861b37e71a028d122eecb955307486)

--- a/attire.html
+++ b/attire.html
@@ -439,6 +439,7 @@
                   class="w-full h-full object-contain object-center pointer-events-none"
                   src="Assets/mood_sage.jpg"
                   alt="Sage Green moodboard – click to view full size"
+                  decoding="async"
                 />
               </div>
             </div>
