--- a/venue.html
+++ b/venue.html
@@ -167,6 +167,7 @@
           class="w-full h-full object-cover grayscale-[20%]"
           data-alt="Luxurious golden-hour view of a grand cathedral and ballroom entrance"
           loading="lazy"
+          decoding="async"
           src="Assets/destination22.jpg"
         />
         <div class="absolute inset-0 z-20 flex items-center justify-center">
@@ -190,6 +191,7 @@
                 class="w-full h-full object-cover"
                 data-alt="Luxurious wedding venue with white architecture and lush gardens"
                 loading="lazy"
+                decoding="async"
                 src="Assets/deharte.jpeg"
               />
               <div
@@ -465,6 +467,7 @@
               class="w-full h-full object-cover"
               data-alt="Soft out of focus luxury silk pattern"
               loading="lazy"
+              decoding="async"
               src="https://lh3.googleusercontent.com/aida-public/AB6AXuCtZHo1yISFfTqSTMksSPLNSPtRqI1ATKegAPvKV8TRCYkpDJ0VgC_bd7pWyNUX5fAgl2ImvDfKrRFucCyR1MfqyhdPtQqAK1o-kw7pRQePLmGy7MgCyFTkR2S8UZEjstcy5Sarq95nt7dpDCQFQA4LNGB-KXVt_tfd_pVyzCiIpysFovW5Nxk_U0BGBtbfvESZ01U2afuHrboQqn04XgoUsbB8mQmheluGxGRU12SKbcQQnCjJ5rttzLASyKWQgyQxtgBa6uBALQxo"
             />
           </div>
