--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=home.html" />
+    <meta http-equiv="refresh" content="0; url=index.php" />
     <script>
-      window.location.replace("home.html");
+      window.location.replace("index.php");
     </script>
   </head>
   <body>
-    <p>Redirecting to <a href="home.html">home.html</a>...</p>
+    <p>Redirecting to <a href="index.php">the site</a>...</p>
   </body>
 </html>
