navigate to index html on github

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </script>
   </head>
   <body>
-    <p>Redirecting to <a href="index.php">the site</a>...</p>
+    <p>Redirecting to <a href="index.html">the site</a>...</p>
   </body>
 </html>
