--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=index.php" />
+    <meta http-equiv="refresh" content="0; url=index.html" />
     <script>
-      window.location.replace("index.php");
+      window.location.replace("index.html");
     </script>
   </head>
   <body>
