index goes to gate

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0; url=index.html" />
     <script>
-      window.location.replace("index.html");
+      window.location.replace("gate.html");
     </script>
   </head>
   <body>
-    <p>Redirecting to <a href="index.html">the site</a>...</p>
+    <p>Redirecting to <a href="gate.html">the site</a>...</p>
   </body>
 </html>
