added the favicon png to each page

--- a/attire.html
+++ b/attire.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Babo &amp; Keagile | A Cinematic Opening</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
