--- a/gate.html
+++ b/gate.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Babo &amp; Keagile | A Wondrous Union</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
