--- a/rsvp.html
+++ b/rsvp.html
@@ -3,7 +3,7 @@
 <html class="light" lang="en">
   <head>
     <meta charset="utf-8" />
-
+    <link rel="icon" type="image/png" href="favicon.png" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Babo &amp; Keagile | A Cinematic Opening</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
