using svg instead

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Cookie Policy | Babo &amp; Keagile</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
