--- a/gate.html
+++ b/gate.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Babo &amp; Keagile | A Wondrous Union</title>
+    <title>Keagile &amp; Babo | A Wondrous Union</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&amp;display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@100..700&amp;display=swap" rel="stylesheet" />
@@ -27,6 +27,7 @@
               champagne: "#e8d8b8",
               taupe: "#81796a",
               pink: "#ebceca",
+              heavyPink: "#edabad",
             },
             fontFamily: { display: ["Newsreader", "serif"] },
             borderRadius: { DEFAULT: "0.25rem", lg: "0.5rem", xl: "0.75rem", full: "9999px" },
@@ -286,7 +287,7 @@
       <div id="guest-check-modal" class="guest-check-modal" aria-hidden="true">
         <div class="guest-check-glass">
           <p class="text-center text-xs uppercase tracking-[0.3em] text-deep-black/70 mb-2">You&rsquo;re invited</p>
-          <h2 class="great-vibes-regular text-3xl md:text-4xl text-center text-deep-black mb-4">Babo &amp; Keagile</h2>
+          <h2 class="great-vibes-regular text-3xl md:text-4xl text-center text-deep-black mb-4">Keagile &amp; Babo</h2>
           <p class="text-sm text-deep-black/80 text-center mb-6 leading-relaxed">
             The couple would love for you to keep the links to this site to yourself and not share them with others.
           </p>
@@ -309,7 +310,7 @@
               </label>
             </div>
             <div id="gate-error" class="text-sm text-red-700 hidden" role="alert"></div>
-            <button type="submit" id="gate-submit" class="w-full py-3 px-4 bg-deep-black text-primary text-xs font-bold uppercase tracking-[0.2em] rounded transition-opacity hover:opacity-90 disabled:opacity-50 flex items-center justify-center gap-2">
+            <button type="submit" id="gate-submit" class="type-button w-full py-3 px-4 bg-deep-black text-primary text-xs font-bold uppercase tracking-[0.2em] rounded-full hover:scale-105 transition-transform disabled:opacity-50 flex items-center justify-center gap-2">
               <span id="gate-submit-text">Continue</span>
             </button>
           </form>
