--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Cookie Policy | Babo &amp; Keagile</title>
+    <title>Cookie Policy | Keagile &amp; Babo</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&amp;display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@100..700&amp;display=swap" rel="stylesheet" />
@@ -24,6 +24,8 @@
               "deep-black": "#111111",
               champagne: "#e8d8b8",
               taupe: "#81796a",
+              pink: "#ebceca",
+              heavyPink: "#edabad",
             },
             fontFamily: { display: ["Newsreader", "serif"] },
             borderRadius: { DEFAULT: "0.25rem", lg: "0.5rem", xl: "0.75rem", full: "9999px" },
@@ -53,7 +55,7 @@
 
       <main class="flex-grow max-w-3xl mx-auto w-full px-8 md:px-12 py-16 md:py-24">
         <h1 class="text-3xl md:text-4xl font-light text-deep-black tracking-tight mb-2">Cookie Policy</h1>
-        <p class="text-xs uppercase tracking-[0.3em] text-taupe font-medium mb-12">Babo &amp; Keagile</p>
+        <p class="text-xs uppercase tracking-[0.3em] text-taupe font-medium mb-12">Keagile &amp; Babo</p>
 
         <div class="space-y-10 text-deep-black/90 leading-relaxed">
           <section>
@@ -82,15 +84,21 @@
           <section class="pt-6">
             <h2 class="text-lg font-medium text-deep-black mb-3 border-b border-primary/30 pb-1">Revoke cookie consent</h2>
             <p class="mb-6">Click the button below to withdraw your consent. We will delete our cookies and end your session. You will be taken back to the gate and will need to enter your name again and accept cookies to continue.</p>
-            <a href="gate.html" class="inline-block px-6 py-3 bg-deep-black text-primary text-xs font-bold uppercase tracking-[0.2em] rounded transition-opacity hover:opacity-90 border border-taupe/30">
-              Revoke cookie consent
+            <div class="pt-2">
+            <a
+              href="gate.html"
+              class="group relative inline-flex items-center justify-center px-10 py-4 bg-pink text-deep-black text-xs font-bold uppercase tracking-[0.2em] rounded-none transition-all duration-300 hover:bg-taupe hover:text-white border border-taupe/30"
+            >
+              <span class="relative z-10">Revoke cookie consent</span>
+              <div class="absolute inset-0 border border-taupe translate-x-1 translate-y-1 opacity-50 hover:border-champagne group-hover:translate-x-0 group-hover:translate-y-0 transition-transform duration-300"></div>
             </a>
+          </div>
           </section>
         </div>
       </main>
 
       <footer class="border-t border-primary/10 py-8 px-8 md:px-20 text-center text-sm text-deep-black/60">
-        <p>&copy; 2025 Babo &amp; Keagile. All rights reserved.</p>
+        <p>&copy; 2025 Keagile &amp; Babo. All rights reserved.</p>
       </footer>
     </div>
   </body>
