--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Babo &amp; Keagile | A Wondrous Union</title>
+    <title>Keagile &amp; Babo | A Wondrous Union</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&amp;display=swap"
