--- a/rsvp.html
+++ b/rsvp.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Babo &amp; Keagile | A Cinematic Opening</title>
+    <title>Keagile &amp; Babo | A Cinematic Opening</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&amp;display=swap"
@@ -40,6 +40,8 @@
               "deep-black": "#111111",
               champagne: "#e8d8b8",
               taupe: "#81796a",
+              pink: "#ebceca",
+              heavyPink: "#edabad",
             },
             fontFamily: {
               display: ["Newsreader", "serif"],
@@ -142,7 +144,7 @@
       <section class="max-w-4xl mx-auto text-center mb-16">
         <span
           class="text-champagne text-sm font-bold uppercase tracking-[0.3em] mb-4 block"
-          >Union of Babo &amp; Keagile</span
+          >Union of Keagile &amp; Babo</span
         >
         <h2 class="text-5xl md:text-7xl font-extralight tracking-tight mb-6">
           RSVP: Your Presence Is Our Joy
@@ -259,10 +261,11 @@
               <div class="text-center pt-8">
                 <button
                   id="send-rsvp-btn"
-                  class="bg-primary hover:bg-primary/90 text-background-dark font-bold py-5 px-16 rounded-full text-sm uppercase tracking-[0.3em] transition-all transform hover:-translate-y-1 shadow-lg shadow-primary/20 active:scale-95"
                   type="button"
+                  class="group relative inline-flex items-center justify-center px-10 py-4 bg-pink text-deep-black text-xs font-bold uppercase tracking-[0.2em] rounded-none transition-all duration-300 hover:bg-taupe hover:text-white border border-taupe/30"
                 >
-                  Send RSVP
+                  <span class="relative z-10">Send RSVP</span>
+                  <div class="absolute inset-0 border border-taupe translate-x-1 translate-y-1 opacity-50 hover:border-champagne group-hover:translate-x-0 group-hover:translate-y-0 transition-transform duration-300"></div>
                 </button>
                 <p
                   class="mt-8 text-xs text-slate-400 uppercase tracking-widest"
@@ -425,13 +428,22 @@
           amount is appreciated and will be a meaningful blessing as we begin
           this new chapter together.
         </p>
+        <p class="mt-4 text-slate-700 leading-relaxed">
+          The couple would like for all cash contributions to go to this account:
+        </p>
+        <dl class="mt-3 space-y-1 text-slate-700">
+          <div class="flex gap-2"><dt class="font-medium min-w-[8rem]">Account name:</dt><dd>Premiere Account</dd></div>
+          <div class="flex gap-2"><dt class="font-medium min-w-[8rem]">Account number:</dt><dd>62552059315</dd></div>
+          <div class="flex gap-2"><dt class="font-medium min-w-[8rem]">Branch code:</dt><dd>283567</dd></div>
+        </dl>
         <div class="mt-8 flex justify-end">
           <button
             id="close-honeymoon-modal"
             type="button"
-            class="bg-primary hover:bg-primary/90 text-background-dark font-bold py-3 px-8 rounded-full text-xs uppercase tracking-[0.25em] transition-all"
+            class="group relative inline-flex items-center justify-center px-8 py-3 bg-pink text-deep-black text-xs font-bold uppercase tracking-[0.2em] rounded-none transition-all duration-300 hover:bg-taupe hover:text-white border border-taupe/30"
           >
-            Close
+            <span class="relative z-10">Close</span>
+            <div class="absolute inset-0 border border-taupe translate-x-1 translate-y-1 opacity-50 hover:border-champagne group-hover:translate-x-0 group-hover:translate-y-0 transition-transform duration-300"></div>
           </button>
         </div>
       </div>
@@ -487,13 +499,17 @@
             >
           </li>
         </ul>
+        <p class="mt-5 text-slate-700 leading-relaxed">
+          <strong>NB:</strong> We&rsquo;d prefer the gifts to be given in Botswana to avoid traveling with the gifts.
+        </p>
         <div class="mt-8 flex justify-end">
           <button
             id="close-home-decor-modal"
             type="button"
-            class="bg-primary hover:bg-primary/90 text-background-dark font-bold py-3 px-8 rounded-full text-xs uppercase tracking-[0.25em] transition-all"
+            class="group relative inline-flex items-center justify-center px-8 py-3 bg-pink text-deep-black text-xs font-bold uppercase tracking-[0.2em] rounded-none transition-all duration-300 hover:bg-taupe hover:text-white border border-taupe/30"
           >
-            Close
+            <span class="relative z-10">Close</span>
+            <div class="absolute inset-0 border border-taupe translate-x-1 translate-y-1 opacity-50 hover:border-champagne group-hover:translate-x-0 group-hover:translate-y-0 transition-transform duration-300"></div>
           </button>
         </div>
       </div>
@@ -528,9 +544,10 @@
           <button
             id="close-rsvp-reminder"
             type="button"
-            class="bg-primary hover:bg-primary/90 text-background-dark font-bold py-3 px-8 rounded-full text-xs uppercase tracking-[0.25em] transition-all"
+            class="group relative inline-flex items-center justify-center px-8 py-3 bg-pink text-deep-black text-xs font-bold uppercase tracking-[0.2em] rounded-none transition-all duration-300 hover:bg-taupe hover:text-white border border-taupe/30"
           >
-            Close
+            <span class="relative z-10">Close</span>
+            <div class="absolute inset-0 border border-taupe translate-x-1 translate-y-1 opacity-50 hover:border-champagne group-hover:translate-x-0 group-hover:translate-y-0 transition-transform duration-300"></div>
           </button>
         </div>
       </div>
